--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "axolotl>=0.4.0",
     "wandb>=0.16.0",
     "tensorboard>=2.15.0",
+    "requests>=2.31.0",  # For vLLM API testing and metrics
     # flash-attn is installed separately in setup script with build dependencies
     # "flash-attn>=2.3.0",
 ]
